<resources>
    <string name="app_name" translatable="false">Story App Dicoding</string>
    <string name="welcome_story_app">Welcome in Story App Dicoding</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="description">Description</string>
    <string name="title">Story</string>
    <string name="gallery">Gallery</string>
    <string name="desc_story">Story Description</string>
    <string name="up_story">Upload Story</string>
    <string name="regist_success">Registration Successful</string>
    <string name="regist_fail">Registration Failed</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password_short">Password cannot be less than 8 characters</string>
    <string name="login_success">Login Successful</string>
    <string name="login_fail">Login Failed: Invalid credentials</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="pass_emp">Password cannot be empty</string>
    <string name="story_detail_fail">Story ID or token not found</string>
    <string name="img_cant_found">Image not found</string>
    <string name="desc_story_emp">Description cannot be empty</string>
    <string name="img_empty">Please insert the image file first</string>
    <string name="up_success">Upload Success</string>
    <string name="up_failed">Upload Failed</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="logout_success">Logout Success</string>
    <string name="loading">Retry</string>
    <string name="normal" translatable="false">Normal</string>
    <string name="satelite" translatable="false">Satelite</string>
    <string name="terrain" translatable="false">Terrain</string>
    <string name="hybrid" translatable="false">Hybrid</string>
    <string name="share_location">Share Your Location</string>
</resources>