<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skin_color"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_photo_preview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:background="@color/darker_gray"/>

        <Button
            android:id="@+id/btn_choose_from_gallery"
            android:layout_width="match_parent"
            android:contentDescription="@string/description"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/gallery" />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/desc_story"
            android:gravity="top"
            android:background="@drawable/edittext_border"
            android:padding="16dp" />

        <CheckBox
            android:id="@+id/cb_share_location"
            android:layout_width="wrap_content"
            android:contentDescription="@string/description"
            android:layout_height="wrap_content"
            android:text="@string/share_location" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up_story"
            android:contentDescription="@string/description"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:layout_gravity="center"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/orange"/>
    </LinearLayout>
</ScrollView>
