<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.welcome.WelcomeActivity">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_welcome_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_welcome_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_story_app"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/img_logo"
                app:layout_constraintBottom_toTopOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_register"
                app:layout_constraintWidth_percent="0.4"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:backgroundTint="@color/light_orange"
                app:layout_constraintTop_toBottomOf="@id/tv_welcome_message"
                app:layout_constraintStart_toEndOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.4"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
